# CNN-gene-predictions

./: .gitignore  Database.py  README.md  desktop.ini  docker-compose.yml
app/: package-lock.json  package.json
app/public/: index.html
app/src/: App.js  index.js
app/src/components/: backdrop.jsx  entry.jsx  genelist.jsx  graph.jsx  modal.jsx  node.jsx
graphs/: .gitignore  CMakeLists.txt  Dockerfile  README.md  makefile
graphs/src/: GraphResourceFactory.cpp  GraphResourceFactory.h  GraphService.cpp  GraphService.h  GraphServiceSettingsFactory.cpp  GraphServiceSettingsFactory.h  IResourceFactory.h  IService.h  IServiceSettingsFactory.h  graph.cpp  main.cpp  test.cpp
src/: .gitignore  api.py  app.py  database.py  graph.ipynb  graph_generation.py  main.py  model.ipynb  model.py  package-lock.json  pyg_intro.ipynb  requirements.txt  send.py
src/src/: App.js
